# FaceDetectorFolder

./: CMakeLists.txt  README.md
cmake/: windeploy.cmake
include/: FaceDetector.h  FaceDetectorBlock.h  FileSourceBlock.h  Forwards.h  IPipelineBlock.h  QBackend.h  ResultBlock.h
rsc/: main.qml
src/: FaceDetector.cpp  FaceDetectorBlock.cpp  FileSourceBlock.cpp  IPipelineBlock.cpp  QBackend.cpp  ResultBlock.cpp  main.cpp
